# piped

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: built-in-functions.md  built-in-pipelines.md  built-ins.md
examples/: basics.piped  return_a_value.piped  subpipeline.piped  test.piped
piped-diagnostics/: Cargo.toml
piped-diagnostics/src/: lib.rs
piped-parser/: Cargo.toml
piped-parser/src/: ast.rs
piped-parser/src/lexer/: mod.rs  symbols.rs  token.rs  token_kind.rs  token_literal.rs  token_literal_kind.rs
piped-parser/src/low_lexer/: low_token.rs  low_token_kind.rs  low_token_literal_kind.rs  low_token_number_literal_kind.rs  mod.rs
piped-span/: Cargo.toml
piped-span/src/: lib.rs  source_file.rs  source_map.rs  span.rs
piped-symbol/: Cargo.toml
piped-symbol/src/: interner.rs
piped-utils/: Cargo.toml
piped-utils/src/: id.rs
pipelines/: copy-list.py  copy.py
src/: main.rs
src/compiler/: lexer.rs  lookahead_lexer.rs  mod.rs  parser.rs
src/core/: attribute.rs  mod.rs  pipeline.rs  task.rs  value.rs
src/core/pipelines/: python.rs
src/runtime/: context.rs  execution.rs  function.rs  imported_pipeline.rs  mod.rs  pipeline.rs  sub_execution.rs  value.rs
src/runtime/builtins/: exec_pipeline.rs  functions.rs  mod.rs  pipelines.rs
src/runtime/builtins/functions/: function.rs  function_contains.rs  function_equals.rs  function_get.rs  function_glob.rs  function_is_exists.rs  function_join_path.rs  function_len.rs  function_re_replace.rs  function_typeof.rs  mod.rs
src/runtime/builtins/pipelines/: mod.rs  pipeline.rs  pipeline_exec.rs
src/runtime/builtins/variables/: mod.rs  variable.rs  variable_host_arch.rs  variable_host_os.rs
tasks/: test.piped  test.ron
