[package]
name = "piped"
description = "A pipeline orchestrator for everyone to build softwares easier and faster"
version = "0.2.0"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.0"
