[package]
name = "piped"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4" }
colored = { version = "2" }
piped-diagnostics = { path = "piped-diagnostics" }
piped-parser = { path = "piped-parser" }
piped-span = { path = "piped-span" }
piped-symbol = { path = "piped-symbol" }
piped-utils = { path = "piped-utils" }

[workspace]
members = [
  "piped-diagnostics",
  "piped-parser",
  "piped-span",
  "piped-symbol",
  "piped-utils",
]
