[package]
name = "piped-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piped-diagnostics = { path = "../piped-diagnostics" }
piped-span = { path = "../piped-span" }
piped-symbol = { path = "../piped-symbol" }
lazy_static = { version = "1" }
unicode-xid = { version = "0.2" }
